# numba-cuda-mlir

./: .flake8  .gitignore  .pre-commit-config.yaml  .spdx-ignore  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  INSTALL.md  LICENSE  NOTICE  README.md  THIRD-PARTY-LICENSES  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request.md  submit-question.md
.github/workflows/: bandit.yml  blackduck.yml  build-docs.yml  build-llvm.yml  build-wheel.yml  ci.yaml  cleanup-pr-previews.yml  codeql.yml  conda-python-tests.yaml  publish.yaml  simulator-test.yaml  test-cuda-gdb-linux.yml  test-cudf-source-linux.yml  test-expensive-linux.yml  test-numbast-mlir-linux.yml  test-nvmath-python-mlir-linux.yml  test-wheel-linux.yml  test-wheel-windows.yml  wheels-test.yaml
0.3.0/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
0.3.0/reference/: cache_hints.html  envvars.html  host.html  index.html  kernel.html  libdevice.html  memory.html  types.html
0.3.0/user/: callconv.html  cooperative_groups.html  cuda_compilation.html  cuda_ffi.html  cudapysupported.html  debugging.html  device-management.html  examples.html  fastmath.html  globals.html  index.html  installation.html  intrinsics.html  ipc.html  kernels.html  memory.html  random.html  reduction.html  ufunc.html
0.4.0/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html
0.4.0/extending/: high-level.html  index.html  low-level.html
0.4.0/reference/: cache_hints.html  (+8 more)
0.4.1/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html
0.4.2/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html
cext/: CMakeLists.txt
cext/launcher/: CMakeLists.txt  check.cpp  check.h  cuda_helper.cpp  cuda_helper.h  cuda_loader.cpp  cuda_loader.h  cuda_shim.h  kernel.cpp  kernel.h  llvm_downgrade.cpp  llvm_downgrade.h  module.cpp  py.cpp  py.h  ref_ptr.h
cext/mlir-llvm70/: CMakeLists.txt  README.md
cext/mlir-llvm70/include/llvm70/: CAPILoader.h  LLVM70IRBuilder.h  LLVM70Target.h  LibNVVMCompiler.h
cext/mlir-llvm70/include/llvm70/Dialect/: CMakeLists.txt  LLVM70.h  LLVM70Ops.td
cext/mlir-llvm70/lib/: CAPI.cpp  CMakeLists.txt  LLVM70IRBuilder.cpp  LLVM70Target.cpp  LibNVVMCompiler.cpp
cext/mlir-llvm70/lib/Dialect/: LLVM70Dialect.cpp
cext/mlir-llvm70/scripts/: run-test-matrix.sh
cext/mlir-llvm70/test/: CMakeLists.txt  abs.mlir  atomics.mlir  bar_warp_sync.mlir  barrier.mlir  bf16.mlir  bitreverse.mlir  breakpoint.mlir  cluster_arrive.mlir  const_struct.mlir  ctlz.mlir  ctpop.mlir  cttz.mlir  debuginfo.mlir  debuginfo_declare.mlir  debuginfo_loc.mlir  elect_sync.mlir  fastmath_flags.mlir  fma.mlir  frexp.mlir  ftrunc.mlir  inline_asm.mlir  ldexp.mlir  lifetime.mlir  lit.cfg.py  lit.site.cfg.py.in  match_sync.mlir  matmul.mlir  membar.mlir  memcpy.mlir  memset.mlir  minmax.mlir  nanosleep.mlir  redux_sync.mlir  reject_sm100.mlir  reject_sm70.mlir  shfl_sync.mlir  simple-kernel-target.mlir  sminmax.mlir  sreg_cluster.mlir  (+6 more)
cext/mlir-llvm70/test/cudf/: cudf_example_1.mlir  cudf_example_2.mlir  cudf_example_3.mlir
cext/mlir-llvm70/tools/: CMakeLists.txt  llvm70-translate.cpp
cext/mlir-nvvm70/: CMakeLists.txt  README.md
cext/mlir-nvvm70/include/nvvm70/: CAPILoader.h  LibNVVMCompiler.h  NVVM70IRBuilder.h  NVVM70Target.h
cext/mlir-nvvm70/include/nvvm70/Dialect/: CMakeLists.txt  NVVM70.h  NVVM70Ops.td
cext/mlir-nvvm70/lib/: CAPI.cpp  CMakeLists.txt  LibNVVMCompiler.cpp  NVVM70IRBuilder.cpp  NVVM70Target.cpp
cext/mlir-nvvm70/lib/Dialect/: NVVM70Dialect.cpp
cext/mlir-nvvm70/scripts/: run-test-matrix.sh
cext/mlir-nvvm70/test/: CMakeLists.txt  abs.mlir  atomics.mlir  bar_warp_sync.mlir  barrier.mlir  bf16.mlir  bitreverse.mlir  breakpoint.mlir  cluster_arrive.mlir  const_struct.mlir  ctlz.mlir  ctpop.mlir  cttz.mlir  debuginfo.mlir  debuginfo_declare.mlir  debuginfo_loc.mlir  elect_sync.mlir  fma.mlir  frexp.mlir  ftrunc.mlir  inline_asm.mlir  ldexp.mlir  lifetime.mlir  lit.cfg.py  lit.site.cfg.py.in  match_sync.mlir  matmul.mlir  membar.mlir  memcpy.mlir  memset.mlir  minmax.mlir  nanosleep.mlir  redux_sync.mlir  reject_sm100.mlir  reject_sm70.mlir  shfl_sync.mlir  simple-kernel-target.mlir  sminmax.mlir  sreg_cluster.mlir  sreg_cluster_dim_blocks.mlir  (+5 more)
cext/mlir-nvvm70/test/cudf/: cudf_example_1.mlir  cudf_example_2.mlir  cudf_example_3.mlir
cext/mlir-nvvm70/tools/: CMakeLists.txt  nvvm70-translate.cpp
cext/mviewbuf/: CMakeLists.txt  mviewbuf.cpp
cext/typeconv/: CMakeLists.txt  _typeconv.cpp
ci/: build-llvm-modern.sh  build-llvm7.sh  build-windows.sh  cleanup-pr-previews  llvm-cache-key.sh  llvm-cache.sh  llvm-version.env  matrix.yml  patch-nanobind-2.13.py  setup-sccache.sh  test-matrix.yml  windows-llvm-container-build.ps1  windows-run-tests-container.ps1
cmake/: FindCUDAToolkit.cmake
docs/: build_docs.sh  differences-between-mlir-numpy.md  inline-assembly.md  install-llvm.md  intrinsics.md  versions.json
latest/: genindex.html  index.html  search.html  searchindex.js
scripts/: generate-test-checks.py  version.py
tests/: conftest.py  gpu_utils.py  lineinfo_usecases.py  test_annotations_as_signatures.py  test_argument_handler_extensions.py  test_array.py  test_array_literal_lowering.py  test_array_methods.py  test_array_reductions.py  test_async_launch.py  test_atomics.py  test_bitfields.py  test_bool.py  test_builtin_broadcasted_binops.py  test_caching.py  test_class_poly.py  test_cluster_launch.py  test_cmath_signed_zeros.py  test_compat_attrs.py  test_compiler_public_api.py  test_complex.py  test_context_aware_dmm.py  test_coop_sync.py  test_cuda_array_interface_launch_cache.py  test_cuda_builtins.py  test_cuda_gdb.py  test_cupy_types.py  test_cusimt_extending.py  test_datetime.py  test_debuginfo.py  test_descriptor_launch_config.py  test_device_array_capture.py  test_device_default_args.py  test_device_functions.py  test_dispatcher.py  test_dump_nvvm.py  test_dynamic_shared_memory.py  test_enum.py  test_examples.py  test_exotic_float_types.py  (+58 more)
toolshed/: check_spdx.py
(+1301 files in other folders)
