# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "wheel",
    "pip",
    "ninja",
    "cmake",
    "pybind11",
    "nanobind",
    "numpy",
]

[project]
name = "cusimt"
dynamic = ["version",]
description = "cuSIMT Python Compiler"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "NVIDIA Corporation" }
]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "tabulate",
    "typeguard",
    "cloudpickle",
    "pytest",
    "pytest-xdist",
    "pytest-rerunfailures",
    "pytest-benchmark",
    "filecheck",
    "cffi",
    "ml-dtypes",
    "numba==0.63.1"
]

[project.optional-dependencies]
cu12 = [
    "cuda-cccl[cu12]",
]
cu13 = [
    "cuda-cccl[cu13]",
]
dev = [
    "pre-commit",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/NVIDIA/cuda-lang-numba-compat"
Repository = "https://github.com/NVIDIA/cuda-lang-numba-compat"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cusimt", "cusimt*", "cuda", "cuda.*"]
namespaces = true

[tool.setuptools.package-dir]
cusimt = "src/cusimt"
cuda = "src/cuda"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"cusimt" = [
    "lib/*.so",
    "**/*.mlir",
    "**/*.cu",
    "**/*.cuh",
    "**/*.pyi",
    "VERSION",
    "_mlir/**/*.so",
    "_mlir/**/*.py",
    "_mlir/**/*.pyi",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 100

[tool.ruff.lint.pycodestyle]
max-doc-length = 100
max-line-length = 100

[tool.ruff.lint]
ignore = [
    "E20",
    "E231",
    "E241",
    "E26",
    "E731",
    "E741",
    "B028",
    "B904",
    "B905",
    "B019",
]
select = ["B"]
extend-select = ["PERF"]
fixable = ["ALL"]

exclude = [
    "__pycache__",
    ".git",
    "*.pyc",
    "*~",
    "*.o",
    "*.so",
    "*.cpp",
    "*.c",
    "*.h",
    "3rdparty/*",
    "src/cusimt/numba_cuda/*",
    "cext/typeconv/*",
    "cext/helperlib/*",
    "cext/mviewbuf/*",
    "src/cusimt/mlir",
]

[tool.ruff.lint.per-file-ignores]
"**/test*.py" = ["PERF", "B007", "B018", "B023"]
"src/cusimt/__init__.py" = ["F401", "F403", "F405", "E402"]
"src/cuda/**/__init__.py" = ["F401", "F403"]

[tool.pytest.ini_options]
testpaths = [ "tests" ]
filterwarnings = [
    "ignore:The CUDA driver version is older than the backend version:RuntimeWarning",
    "ignore:Grid size.*will likely result in GPU under-utilization:",
    "ignore:Host array used in CUDA kernel will incur copy overhead:",
    "ignore:Numpy array was passed directly to cuSIMT kernel:",
    "ignore:The cuda.core.experimental namespace is deprecated.:",
    "ignore:invalid value encountered:",
    "ignore:It is deprecated to return a value that is not None from a test case:",
    "ignore:Benchmarks are automatically disabled because xdist:pytest_benchmark.logger.PytestBenchmarkWarning",
]
xfail_strict = true
markers = [
    "libdevice: Test cases for libdevice functions. They are flakey because of their use of `exec` and may need to be run on their own.",
]
addopts = [
    "--reruns=3",
    "--only-rerun=Call to cuMemAlloc results in CUDA_ERROR_ILLEGAL_ADDRESS",
    "--ignore=tests/benchmarks/experimental",
    "--ignore=tests/benchmarks/llm.py",
    "--ignore=tests/experimental",
]

[project.scripts]
cusimt-stubgen = "cusimt.tools:create_numba_cuda_stubs"
cusimt-generate-libdevice-stubs = "cusimt.tools:generate_libdevice_stubs"
cusimt-replace-numba-cuda = "cusimt.tools:replace_numba_cuda_in_numba_install"
